# xhh-onebot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.docker.example.json  config.example.json  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: docker-hot-update.sh  setup-venv.ps1
tests/: test_config.py  test_onebot.py  test_poller.py  test_sign.py  test_store.py  test_xhh_client.py
xhh_onebot/: __main__.py  app.py  config.py  store.py
xhh_onebot/onebot/: actions.py  events.py  ws_reverse.py
xhh_onebot/xhh/: client.py  models.py  poller.py  sign.py
