[project]
name = "xhh-onebot"
version = "0.1.0"
description = "Xiaoheihe polling adapter for OneBot v11 reverse WebSocket."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "qrcode[pil]>=7.4",
]

[project.scripts]
xhh-onebot = "xhh_onebot.__main__:main"

[tool.setuptools.packages.find]
include = ["xhh_onebot*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
